--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<h1>Hello Jianyu</h1>
+<!DOCTYPE html>
+<html>
+<body>
 
-<h2>guan</h2>
+<form>
+First name:<br>
+<input type="text" name="firstname">
+<br>
+Last name:<br>
+<input type="text" name="lastname">
+</form>
+
+<p>请注意表单本身是不可见的。</p>
+
+<p>同时请注意文本字段的默认宽度是 20 个字符。</p>
+
+</body>
+</html>
