--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
 <html>
 <body>
 
-<form>
-First name:<br>
-<input type="text" name="firstname">
-<br>
-Last name:<br>
-<input type="text" name="lastname">
-</form>
+<h1>Hello!</h1>
 
-<p>请注意表单本身是不可见的。</p>
-
-<p>同时请注意文本字段的默认宽度是 20 个字符。</p>
+<p>test</p>
 
 </body>
 </html>
